Active Object Pattern

--- a/Design-Patterns-OOP/Design-Patterns-OOP.csproj
+++ b/Design-Patterns-OOP/Design-Patterns-OOP.csproj
@@ -4,6 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
         <RootNamespace>Design_Patterns_OOP</RootNamespace>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
 </Project>
