--- a/Design.Patterns.OOP.Tests/Design.Patterns.OOP.Tests.csproj
+++ b/Design.Patterns.OOP.Tests/Design.Patterns.OOP.Tests.csproj
@@ -20,4 +20,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Design-Patterns-OOP\Design-Patterns-OOP.csproj" />
+    </ItemGroup>
+
 </Project>
